src/main/java/compi/Parser/y.output
   0  $accept : prog $end

   1  prog : '{' sentencias '}'
   2       | '{' sentencias

   3  sentencias : sentencias sen_declarativa
   4             | sentencias sen_ejecutable
   5             | sentencias sen_control
   6             | sen_ejecutable
   7             | sen_control
   8             | sen_declarativa

   9  sen_declarativa : tipo list_var ','
  10                  | funcion
  11                  | clase

  12  tipo : SHORT
  13       | UINT
  14       | FLOAT

  15  CTE : CTE_SHORT
  16      | CTE_UINT
  17      | CTE_FLOAT
  18      | '-' CTE_SHORT
  19      | '-' CTE_FLOAT

  20  list_var : list_var ';' ID
  21           | ID

  22  funcion : VOID ID '(' parametro ')' '{' cuerpo_funcion '}'
  23          | VOID ID '(' ')' '{' cuerpo_funcion '}'
  24          | VOID ID '(' parametro ')' cuerpo_funcion '}'
  25          | VOID ID '(' ')' cuerpo_funcion '}'

  26  parametro : tipo ID
  27            | tipo
  28            | ID

  29  cuerpo_funcion : cuerpo_funcion sen_declarativa sen_retorno ','
  30                 | cuerpo_funcion sen_ejecutable sen_retorno ','
  31                 | cuerpo_funcion seleccion_func
  32                 | sen_declarativa sen_retorno ','
  33                 | sen_ejecutable sen_retorno ','
  34                 | seleccion_func

  35  sen_retorno : RETURN

  36  sen_ejecutable : asignacion ','
  37                 | inv_funcion ','
  38                 | seleccion ','
  39                 | imprimir ','
  40                 | inv_metodo ','

  41  asignacion : ID '=' exp_aritmetica
  42             | atributo_clase '=' exp_aritmetica
  43             | ID '='
  44             | '=' exp_aritmetica
  45             | ID exp_aritmetica
  46             | atributo_clase '='
  47             | atributo_clase exp_aritmetica

  48  inv_funcion : ID '(' exp_aritmetica ')'
  49              | ID '(' ')'
  50              | ID '(' exp_aritmetica
  51              | ID exp_aritmetica ')'
  52              | ID ')'
  53              | ID '('

  54  inv_metodo : atributo_clase '(' exp_aritmetica ')'
  55             | atributo_clase '(' ')'
  56             | atributo_clase '('
  57             | atributo_clase ')'

  58  atributo_clase : ID '.' ID

  59  seleccion : IF '(' condicion ')' bloque_sen_ejecutable ELSE bloque_sen_ejecutable END_IF
  60            | IF '(' condicion ')' bloque_sen_ejecutable END_IF
  61            | IF '(' condicion ')' ELSE bloque_sen_ejecutable END_IF
  62            | IF '(' condicion ')' bloque_sen_ejecutable ELSE END_IF
  63            | IF '(' condicion ')' END_IF

  64  seleccion_func : IF '(' condicion ')' bloque_ejecutable_func ELSE bloque_ejecutable_func END_IF ','
  65                 | IF '(' condicion ')' bloque_ejecutable_func END_IF ','
  66                 | IF '(' condicion ')' ELSE bloque_ejecutable_func END_IF
  67                 | IF '(' condicion ')' bloque_ejecutable_func ELSE END_IF

  68  condicion : exp_aritmetica comparador exp_aritmetica
  69            | exp_aritmetica comparador
  70            | comparador exp_aritmetica
  71            | exp_aritmetica
  72            | comparador

  73  exp_aritmetica : exp_aritmetica '+' termino
  74                 | exp_aritmetica '-' termino
  75                 | termino
  76                 | exp_aritmetica '+' '+' termino
  77                 | exp_aritmetica '+' '*' termino
  78                 | exp_aritmetica '+' '/' termino
  79                 | exp_aritmetica '-' '+' termino
  80                 | exp_aritmetica '-' '*' termino
  81                 | exp_aritmetica '-' '/' termino

  82  termino : termino '*' factor
  83          | termino '/' factor
  84          | factor
  85          | termino '*' '*' factor
  86          | termino '*' '/' factor
  87          | termino '/' '*' factor
  88          | termino '/' '/' factor

  89  factor : ID
  90         | ID INCREMENT
  91         | CTE
  92         | atributo_clase

  93  comparador : NOT_EQUAL
  94             | EQUAL
  95             | GREATER_EQUAL
  96             | LESS_EQUAL
  97             | '<'
  98             | '>'

  99  bloque_sen_ejecutable : sen_ejecutable
 100                        | '{' sen_ejecutable_r '}'
 101                        | sen_ejecutable_r '}'
 102                        | '{' sen_ejecutable_r
 103                        | '{' '}'

 104  bloque_ejecutable_func : sen_retorno ','
 105                         | '{' sen_ejecutable_r sen_retorno ',' '}'
 106                         | ','

 107  sen_ejecutable_r : sen_ejecutable_r sen_ejecutable
 108                   | sen_ejecutable

 109  imprimir : PRINT STR_1LN
 110           | PRINT ','

 111  sen_control : WHILE '(' condicion ')' DO bloque_sen_ejecutable ','
 112              | WHILE condicion ')' DO bloque_sen_ejecutable ','
 113              | WHILE '(' condicion DO bloque_sen_ejecutable ','
 114              | WHILE condicion DO bloque_sen_ejecutable ','
 115              | WHILE '(' condicion ')' DO ','

 116  clase : CLASS ID '{' '}'
 117        | CLASS ID '{' cuerpo_clase '}'
 118        | CLASS ID ','
 119        | CLASS ID cuerpo_clase '}'

 120  cuerpo_clase : cuerpo_clase sen_declarativa
 121               | sen_declarativa

state 0
	$accept : . prog $end  (0)

	'{'  shift 1
	.  error

	prog  goto 2


state 1
	prog : '{' . sentencias '}'  (1)
	prog : '{' . sentencias  (2)

	ID  shift 3
	IF  shift 4
	PRINT  shift 5
	CLASS  shift 6
	VOID  shift 7
	WHILE  shift 8
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	'='  shift 12
	.  error

	sentencias  goto 13
	sen_declarativa  goto 14
	sen_ejecutable  goto 15
	sen_control  goto 16
	tipo  goto 17
	funcion  goto 18
	clase  goto 19
	asignacion  goto 20
	inv_funcion  goto 21
	seleccion  goto 22
	imprimir  goto 23
	inv_metodo  goto 24
	atributo_clase  goto 25


state 2
	$accept : prog . $end  (0)

	$end  accept


state 3
	asignacion : ID . '=' exp_aritmetica  (41)
	asignacion : ID . '='  (43)
	asignacion : ID . exp_aritmetica  (45)
	inv_funcion : ID . '(' exp_aritmetica ')'  (48)
	inv_funcion : ID . '(' ')'  (49)
	inv_funcion : ID . '(' exp_aritmetica  (50)
	inv_funcion : ID . exp_aritmetica ')'  (51)
	inv_funcion : ID . ')'  (52)
	inv_funcion : ID . '('  (53)
	atributo_clase : ID . '.' ID  (58)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	'('  shift 31
	')'  shift 32
	'='  shift 33
	'.'  shift 34
	.  error

	CTE  goto 35
	exp_aritmetica  goto 36
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 4
	seleccion : IF . '(' condicion ')' bloque_sen_ejecutable ELSE bloque_sen_ejecutable END_IF  (59)
	seleccion : IF . '(' condicion ')' bloque_sen_ejecutable END_IF  (60)
	seleccion : IF . '(' condicion ')' ELSE bloque_sen_ejecutable END_IF  (61)
	seleccion : IF . '(' condicion ')' bloque_sen_ejecutable ELSE END_IF  (62)
	seleccion : IF . '(' condicion ')' END_IF  (63)

	'('  shift 40
	.  error


state 5
	imprimir : PRINT . STR_1LN  (109)
	imprimir : PRINT . ','  (110)

	STR_1LN  shift 41
	','  shift 42
	.  error


state 6
	clase : CLASS . ID '{' '}'  (116)
	clase : CLASS . ID '{' cuerpo_clase '}'  (117)
	clase : CLASS . ID ','  (118)
	clase : CLASS . ID cuerpo_clase '}'  (119)

	ID  shift 43
	.  error


state 7
	funcion : VOID . ID '(' parametro ')' '{' cuerpo_funcion '}'  (22)
	funcion : VOID . ID '(' ')' '{' cuerpo_funcion '}'  (23)
	funcion : VOID . ID '(' parametro ')' cuerpo_funcion '}'  (24)
	funcion : VOID . ID '(' ')' cuerpo_funcion '}'  (25)

	ID  shift 44
	.  error


state 8
	sen_control : WHILE . '(' condicion ')' DO bloque_sen_ejecutable ','  (111)
	sen_control : WHILE . condicion ')' DO bloque_sen_ejecutable ','  (112)
	sen_control : WHILE . '(' condicion DO bloque_sen_ejecutable ','  (113)
	sen_control : WHILE . condicion DO bloque_sen_ejecutable ','  (114)
	sen_control : WHILE . '(' condicion ')' DO ','  (115)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	GREATER_EQUAL  shift 45
	LESS_EQUAL  shift 46
	EQUAL  shift 47
	NOT_EQUAL  shift 48
	'-'  shift 30
	'('  shift 49
	'<'  shift 50
	'>'  shift 51
	.  error

	CTE  goto 35
	exp_aritmetica  goto 52
	atributo_clase  goto 37
	condicion  goto 53
	comparador  goto 54
	termino  goto 38
	factor  goto 39


state 9
	tipo : SHORT .  (12)

	.  reduce 12


state 10
	tipo : UINT .  (13)

	.  reduce 13


state 11
	tipo : FLOAT .  (14)

	.  reduce 14


state 12
	asignacion : '=' . exp_aritmetica  (44)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	.  error

	CTE  goto 35
	exp_aritmetica  goto 55
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 13
	prog : '{' sentencias . '}'  (1)
	prog : '{' sentencias .  (2)
	sentencias : sentencias . sen_declarativa  (3)
	sentencias : sentencias . sen_ejecutable  (4)
	sentencias : sentencias . sen_control  (5)

	ID  shift 3
	IF  shift 4
	PRINT  shift 5
	CLASS  shift 6
	VOID  shift 7
	WHILE  shift 8
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	'}'  shift 56
	'='  shift 12
	$end  reduce 2

	sen_declarativa  goto 57
	sen_ejecutable  goto 58
	sen_control  goto 59
	tipo  goto 17
	funcion  goto 18
	clase  goto 19
	asignacion  goto 20
	inv_funcion  goto 21
	seleccion  goto 22
	imprimir  goto 23
	inv_metodo  goto 24
	atributo_clase  goto 25


state 14
	sentencias : sen_declarativa .  (8)

	.  reduce 8


state 15
	sentencias : sen_ejecutable .  (6)

	.  reduce 6


state 16
	sentencias : sen_control .  (7)

	.  reduce 7


state 17
	sen_declarativa : tipo . list_var ','  (9)

	ID  shift 60
	.  error

	list_var  goto 61


state 18
	sen_declarativa : funcion .  (10)

	.  reduce 10


state 19
	sen_declarativa : clase .  (11)

	.  reduce 11


state 20
	sen_ejecutable : asignacion . ','  (36)

	','  shift 62
	.  error


state 21
	sen_ejecutable : inv_funcion . ','  (37)

	','  shift 63
	.  error


state 22
	sen_ejecutable : seleccion . ','  (38)

	','  shift 64
	.  error


state 23
	sen_ejecutable : imprimir . ','  (39)

	','  shift 65
	.  error


state 24
	sen_ejecutable : inv_metodo . ','  (40)

	','  shift 66
	.  error


state 25
	asignacion : atributo_clase . '=' exp_aritmetica  (42)
	asignacion : atributo_clase . '='  (46)
	asignacion : atributo_clase . exp_aritmetica  (47)
	inv_metodo : atributo_clase . '(' exp_aritmetica ')'  (54)
	inv_metodo : atributo_clase . '(' ')'  (55)
	inv_metodo : atributo_clase . '('  (56)
	inv_metodo : atributo_clase . ')'  (57)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	'('  shift 67
	')'  shift 68
	'='  shift 69
	.  error

	CTE  goto 35
	exp_aritmetica  goto 70
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 26
	atributo_clase : ID . '.' ID  (58)
	factor : ID .  (89)
	factor : ID . INCREMENT  (90)

	INCREMENT  shift 71
	'.'  shift 34
	DO  reduce 89
	GREATER_EQUAL  reduce 89
	LESS_EQUAL  reduce 89
	EQUAL  reduce 89
	NOT_EQUAL  reduce 89
	'+'  reduce 89
	'-'  reduce 89
	'*'  reduce 89
	'/'  reduce 89
	','  reduce 89
	')'  reduce 89
	'<'  reduce 89
	'>'  reduce 89


state 27
	CTE : CTE_SHORT .  (15)

	.  reduce 15


state 28
	CTE : CTE_UINT .  (16)

	.  reduce 16


state 29
	CTE : CTE_FLOAT .  (17)

	.  reduce 17


state 30
	CTE : '-' . CTE_SHORT  (18)
	CTE : '-' . CTE_FLOAT  (19)

	CTE_SHORT  shift 72
	CTE_FLOAT  shift 73
	.  error


state 31
	inv_funcion : ID '(' . exp_aritmetica ')'  (48)
	inv_funcion : ID '(' . ')'  (49)
	inv_funcion : ID '(' . exp_aritmetica  (50)
	inv_funcion : ID '(' .  (53)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	')'  shift 74
	','  reduce 53

	CTE  goto 35
	exp_aritmetica  goto 75
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 32
	inv_funcion : ID ')' .  (52)

	.  reduce 52


state 33
	asignacion : ID '=' . exp_aritmetica  (41)
	asignacion : ID '=' .  (43)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	','  reduce 43

	CTE  goto 35
	exp_aritmetica  goto 76
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 34
	atributo_clase : ID '.' . ID  (58)

	ID  shift 77
	.  error


state 35
	factor : CTE .  (91)

	.  reduce 91


state 36
	asignacion : ID exp_aritmetica .  (45)
	inv_funcion : ID exp_aritmetica . ')'  (51)
	exp_aritmetica : exp_aritmetica . '+' termino  (73)
	exp_aritmetica : exp_aritmetica . '-' termino  (74)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (77)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (78)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (79)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (81)

	'+'  shift 78
	'-'  shift 79
	')'  shift 80
	','  reduce 45


state 37
	factor : atributo_clase .  (92)

	.  reduce 92


state 38
	exp_aritmetica : termino .  (75)
	termino : termino . '*' factor  (82)
	termino : termino . '/' factor  (83)
	termino : termino . '*' '*' factor  (85)
	termino : termino . '*' '/' factor  (86)
	termino : termino . '/' '*' factor  (87)
	termino : termino . '/' '/' factor  (88)

	'*'  shift 81
	'/'  shift 82
	DO  reduce 75
	GREATER_EQUAL  reduce 75
	LESS_EQUAL  reduce 75
	EQUAL  reduce 75
	NOT_EQUAL  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	','  reduce 75
	')'  reduce 75
	'<'  reduce 75
	'>'  reduce 75


state 39
	termino : factor .  (84)

	.  reduce 84


state 40
	seleccion : IF '(' . condicion ')' bloque_sen_ejecutable ELSE bloque_sen_ejecutable END_IF  (59)
	seleccion : IF '(' . condicion ')' bloque_sen_ejecutable END_IF  (60)
	seleccion : IF '(' . condicion ')' ELSE bloque_sen_ejecutable END_IF  (61)
	seleccion : IF '(' . condicion ')' bloque_sen_ejecutable ELSE END_IF  (62)
	seleccion : IF '(' . condicion ')' END_IF  (63)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	GREATER_EQUAL  shift 45
	LESS_EQUAL  shift 46
	EQUAL  shift 47
	NOT_EQUAL  shift 48
	'-'  shift 30
	'<'  shift 50
	'>'  shift 51
	.  error

	CTE  goto 35
	exp_aritmetica  goto 52
	atributo_clase  goto 37
	condicion  goto 83
	comparador  goto 54
	termino  goto 38
	factor  goto 39


state 41
	imprimir : PRINT STR_1LN .  (109)

	.  reduce 109


state 42
	imprimir : PRINT ',' .  (110)

	.  reduce 110


state 43
	clase : CLASS ID . '{' '}'  (116)
	clase : CLASS ID . '{' cuerpo_clase '}'  (117)
	clase : CLASS ID . ','  (118)
	clase : CLASS ID . cuerpo_clase '}'  (119)

	CLASS  shift 6
	VOID  shift 7
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	'{'  shift 84
	','  shift 85
	.  error

	sen_declarativa  goto 86
	tipo  goto 17
	funcion  goto 18
	clase  goto 19
	cuerpo_clase  goto 87


state 44
	funcion : VOID ID . '(' parametro ')' '{' cuerpo_funcion '}'  (22)
	funcion : VOID ID . '(' ')' '{' cuerpo_funcion '}'  (23)
	funcion : VOID ID . '(' parametro ')' cuerpo_funcion '}'  (24)
	funcion : VOID ID . '(' ')' cuerpo_funcion '}'  (25)

	'('  shift 88
	.  error


state 45
	comparador : GREATER_EQUAL .  (95)

	.  reduce 95


state 46
	comparador : LESS_EQUAL .  (96)

	.  reduce 96


state 47
	comparador : EQUAL .  (94)

	.  reduce 94


state 48
	comparador : NOT_EQUAL .  (93)

	.  reduce 93


state 49
	sen_control : WHILE '(' . condicion ')' DO bloque_sen_ejecutable ','  (111)
	sen_control : WHILE '(' . condicion DO bloque_sen_ejecutable ','  (113)
	sen_control : WHILE '(' . condicion ')' DO ','  (115)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	GREATER_EQUAL  shift 45
	LESS_EQUAL  shift 46
	EQUAL  shift 47
	NOT_EQUAL  shift 48
	'-'  shift 30
	'<'  shift 50
	'>'  shift 51
	.  error

	CTE  goto 35
	exp_aritmetica  goto 52
	atributo_clase  goto 37
	condicion  goto 89
	comparador  goto 54
	termino  goto 38
	factor  goto 39


state 50
	comparador : '<' .  (97)

	.  reduce 97


state 51
	comparador : '>' .  (98)

	.  reduce 98


state 52
	condicion : exp_aritmetica . comparador exp_aritmetica  (68)
	condicion : exp_aritmetica . comparador  (69)
	condicion : exp_aritmetica .  (71)
	exp_aritmetica : exp_aritmetica . '+' termino  (73)
	exp_aritmetica : exp_aritmetica . '-' termino  (74)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (77)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (78)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (79)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (81)

	GREATER_EQUAL  shift 45
	LESS_EQUAL  shift 46
	EQUAL  shift 47
	NOT_EQUAL  shift 48
	'+'  shift 78
	'-'  shift 79
	'<'  shift 50
	'>'  shift 51
	DO  reduce 71
	')'  reduce 71

	comparador  goto 90


state 53
	sen_control : WHILE condicion . ')' DO bloque_sen_ejecutable ','  (112)
	sen_control : WHILE condicion . DO bloque_sen_ejecutable ','  (114)

	DO  shift 91
	')'  shift 92
	.  error


state 54
	condicion : comparador . exp_aritmetica  (70)
	condicion : comparador .  (72)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	DO  reduce 72
	')'  reduce 72

	CTE  goto 35
	exp_aritmetica  goto 93
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 55
	asignacion : '=' exp_aritmetica .  (44)
	exp_aritmetica : exp_aritmetica . '+' termino  (73)
	exp_aritmetica : exp_aritmetica . '-' termino  (74)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (77)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (78)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (79)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (81)

	'+'  shift 78
	'-'  shift 79
	','  reduce 44


state 56
	prog : '{' sentencias '}' .  (1)

	.  reduce 1


state 57
	sentencias : sentencias sen_declarativa .  (3)

	.  reduce 3


state 58
	sentencias : sentencias sen_ejecutable .  (4)

	.  reduce 4


state 59
	sentencias : sentencias sen_control .  (5)

	.  reduce 5


state 60
	list_var : ID .  (21)

	.  reduce 21


state 61
	sen_declarativa : tipo list_var . ','  (9)
	list_var : list_var . ';' ID  (20)

	','  shift 94
	';'  shift 95
	.  error


state 62
	sen_ejecutable : asignacion ',' .  (36)

	.  reduce 36


state 63
	sen_ejecutable : inv_funcion ',' .  (37)

	.  reduce 37


state 64
	sen_ejecutable : seleccion ',' .  (38)

	.  reduce 38


state 65
	sen_ejecutable : imprimir ',' .  (39)

	.  reduce 39


state 66
	sen_ejecutable : inv_metodo ',' .  (40)

	.  reduce 40


state 67
	inv_metodo : atributo_clase '(' . exp_aritmetica ')'  (54)
	inv_metodo : atributo_clase '(' . ')'  (55)
	inv_metodo : atributo_clase '(' .  (56)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	')'  shift 96
	','  reduce 56

	CTE  goto 35
	exp_aritmetica  goto 97
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 68
	inv_metodo : atributo_clase ')' .  (57)

	.  reduce 57


state 69
	asignacion : atributo_clase '=' . exp_aritmetica  (42)
	asignacion : atributo_clase '=' .  (46)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	','  reduce 46

	CTE  goto 35
	exp_aritmetica  goto 98
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 70
	asignacion : atributo_clase exp_aritmetica .  (47)
	exp_aritmetica : exp_aritmetica . '+' termino  (73)
	exp_aritmetica : exp_aritmetica . '-' termino  (74)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (77)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (78)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (79)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (81)

	'+'  shift 78
	'-'  shift 79
	','  reduce 47


state 71
	factor : ID INCREMENT .  (90)

	.  reduce 90


state 72
	CTE : '-' CTE_SHORT .  (18)

	.  reduce 18


state 73
	CTE : '-' CTE_FLOAT .  (19)

	.  reduce 19


state 74
	inv_funcion : ID '(' ')' .  (49)

	.  reduce 49


state 75
	inv_funcion : ID '(' exp_aritmetica . ')'  (48)
	inv_funcion : ID '(' exp_aritmetica .  (50)
	exp_aritmetica : exp_aritmetica . '+' termino  (73)
	exp_aritmetica : exp_aritmetica . '-' termino  (74)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (77)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (78)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (79)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (81)

	'+'  shift 78
	'-'  shift 79
	')'  shift 99
	','  reduce 50


state 76
	asignacion : ID '=' exp_aritmetica .  (41)
	exp_aritmetica : exp_aritmetica . '+' termino  (73)
	exp_aritmetica : exp_aritmetica . '-' termino  (74)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (77)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (78)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (79)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (81)

	'+'  shift 78
	'-'  shift 79
	','  reduce 41


state 77
	atributo_clase : ID '.' ID .  (58)

	.  reduce 58


state 78
	exp_aritmetica : exp_aritmetica '+' . termino  (73)
	exp_aritmetica : exp_aritmetica '+' . '+' termino  (76)
	exp_aritmetica : exp_aritmetica '+' . '*' termino  (77)
	exp_aritmetica : exp_aritmetica '+' . '/' termino  (78)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'+'  shift 100
	'-'  shift 30
	'*'  shift 101
	'/'  shift 102
	.  error

	CTE  goto 35
	atributo_clase  goto 37
	termino  goto 103
	factor  goto 39


state 79
	exp_aritmetica : exp_aritmetica '-' . termino  (74)
	exp_aritmetica : exp_aritmetica '-' . '+' termino  (79)
	exp_aritmetica : exp_aritmetica '-' . '*' termino  (80)
	exp_aritmetica : exp_aritmetica '-' . '/' termino  (81)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'+'  shift 104
	'-'  shift 30
	'*'  shift 105
	'/'  shift 106
	.  error

	CTE  goto 35
	atributo_clase  goto 37
	termino  goto 107
	factor  goto 39


state 80
	inv_funcion : ID exp_aritmetica ')' .  (51)

	.  reduce 51


state 81
	termino : termino '*' . factor  (82)
	termino : termino '*' . '*' factor  (85)
	termino : termino '*' . '/' factor  (86)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	'*'  shift 108
	'/'  shift 109
	.  error

	CTE  goto 35
	atributo_clase  goto 37
	factor  goto 110


state 82
	termino : termino '/' . factor  (83)
	termino : termino '/' . '*' factor  (87)
	termino : termino '/' . '/' factor  (88)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	'*'  shift 111
	'/'  shift 112
	.  error

	CTE  goto 35
	atributo_clase  goto 37
	factor  goto 113


state 83
	seleccion : IF '(' condicion . ')' bloque_sen_ejecutable ELSE bloque_sen_ejecutable END_IF  (59)
	seleccion : IF '(' condicion . ')' bloque_sen_ejecutable END_IF  (60)
	seleccion : IF '(' condicion . ')' ELSE bloque_sen_ejecutable END_IF  (61)
	seleccion : IF '(' condicion . ')' bloque_sen_ejecutable ELSE END_IF  (62)
	seleccion : IF '(' condicion . ')' END_IF  (63)

	')'  shift 114
	.  error


state 84
	clase : CLASS ID '{' . '}'  (116)
	clase : CLASS ID '{' . cuerpo_clase '}'  (117)

	CLASS  shift 6
	VOID  shift 7
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	'}'  shift 115
	.  error

	sen_declarativa  goto 86
	tipo  goto 17
	funcion  goto 18
	clase  goto 19
	cuerpo_clase  goto 116


state 85
	clase : CLASS ID ',' .  (118)

	.  reduce 118


state 86
	cuerpo_clase : sen_declarativa .  (121)

	.  reduce 121


state 87
	clase : CLASS ID cuerpo_clase . '}'  (119)
	cuerpo_clase : cuerpo_clase . sen_declarativa  (120)

	CLASS  shift 6
	VOID  shift 7
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	'}'  shift 117
	.  error

	sen_declarativa  goto 118
	tipo  goto 17
	funcion  goto 18
	clase  goto 19


state 88
	funcion : VOID ID '(' . parametro ')' '{' cuerpo_funcion '}'  (22)
	funcion : VOID ID '(' . ')' '{' cuerpo_funcion '}'  (23)
	funcion : VOID ID '(' . parametro ')' cuerpo_funcion '}'  (24)
	funcion : VOID ID '(' . ')' cuerpo_funcion '}'  (25)

	ID  shift 119
	SHORT  shift 9
	UINT  shift 10
	FLOAT  shift 11
	')'  shift 120
	.  error

	tipo  goto 121
	parametro  goto 122


state 89
	sen_control : WHILE '(' condicion . ')' DO bloque_sen_ejecutable ','  (111)
	sen_control : WHILE '(' condicion . DO bloque_sen_ejecutable ','  (113)
	sen_control : WHILE '(' condicion . ')' DO ','  (115)

	DO  shift 123
	')'  shift 124
	.  error


state 90
	condicion : exp_aritmetica comparador . exp_aritmetica  (68)
	condicion : exp_aritmetica comparador .  (69)

	ID  shift 26
	CTE_SHORT  shift 27
	CTE_UINT  shift 28
	CTE_FLOAT  shift 29
	'-'  shift 30
	DO  reduce 69
	')'  reduce 69

	CTE  goto 35
	exp_aritmetica  goto 125
	atributo_clase  goto 37
	termino  goto 38
	factor  goto 39


state 91
	sen_control : WHILE condicion DO . bloque_sen_ejecutable ','  (114)

	ID  shift 3
	IF  shift 4
	PRINT  shift 5
	'{'  shift 126
	'='  shift 12
	.  error

	sen_ejecutable  goto 127
	asignacion  goto 20
	inv_funcion  goto 21
	seleccion  goto 22
	imprimir  goto 23
	inv_metodo  goto 24
	atributo_clase  goto 25
	bloque_sen_ejecutable  goto 128
	sen_ejecutable_r  goto 129


state 92
	sen_control : WHILE condicion ')' . DO bloque_sen_ejecutable ','  (112)

	DO  shift 130
	.  error


state 93
	condicion : comparador exp_aritmetica .  (70)
	exp_aritmetica : exp_aritmetica . '+' termino  (73)
	exp_aritmetica : exp_aritmetica . '-' termino  (74)
	exp_aritmetica : exp_aritmetica . '+' '+' termino  (76)
	exp_aritmetica : exp_aritmetica . '+' '*' termino  (77)
	exp_aritmetica : exp_aritmetica . '+' '/' termino  (78)
	exp_aritmetica : exp_aritmetica . '-' '+' termino  (79)
	exp_aritmetica : exp_aritmetica . '-' '*' termino  (80)
	exp_aritmetica : exp_aritmetica . '-' '/' termino  (81)

	'+'  shift 78
	'-'  shift 79
	DO  reduce 70
	')'  reduce 70


state 94
	sen_declarativa : tipo list_var ',' .  (9)

	.  reduce 9


state 95
	list_var : list_var ';' . ID  (20)

	ID  shift 131
	.  error


state 96
	inv_metodo : atributo_clase '(' ')' .  (55)

	.  reduce 55

